update schedule function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(getPlaytypePlayer)
 export(getPlaytypeTeam)
 export(getSchedule)
 export(getShotchart)
+export(mo2Num)
 export(writePG)
 import(RPostgreSQL)
 import(XML)
