--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ import(RPostgreSQL)
 import(XML)
 import(dplyr)
 import(jsonlite)
+import(sqldf)
 import(stringr)
 import(zoo)
 importFrom(lubridate,hours)
