bit better (data.table)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,8 @@ import(jsonlite)
 import(sqldf)
 import(stringr)
 import(zoo)
+importFrom(data.table,as.data.table)
+importFrom(data.table,frank)
 importFrom(lubridate,hours)
 importFrom(lubridate,minutes)
 importFrom(lubridate,seconds)
