--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,10 +5,11 @@ Version: 0.0.4
 Date: 2016-11-05
 Author: Patrick Chodowski
 Maintainer: Patrick Chodowski <chodowski.patrick@gmail.com>
-Description: Set of functions to download data from NBA.com and write it to local Postgres DB
+Description: Set of functions to download data from NBA.com and write it to
+    local Postgres DB
 License: GPL-2
 LazyData: TRUE
-RoxygenNote: 6.0.1
+RoxygenNote: 5.0.1
 Imports:
-  RPostgreSQL (>= 0.4.0),
-  XML  (>= 3.98.0),
+    RPostgreSQL (>= 0.4.0),
+    XML  (>= 3.98.0),
