--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: NBAr
 Type: Package
 Title: Get and process NBA data easily
-Version: 0.0.4
-Date: 2016-11-05
+Version: 0.9.5
+Date: 2017-05-03
 Author: Patrick Chodowski
 Maintainer: Patrick Chodowski <chodowski.patrick@gmail.com>
 Description: Set of functions to download data from NBA.com and write it to
@@ -12,4 +12,4 @@ LazyData: TRUE
 RoxygenNote: 5.0.1
 Imports:
     RPostgreSQL (>= 0.4.0),
-    XML  (>= 3.98.0),
+    XML  (>= 3.98.0)
