--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,13 @@ Description: Set of functions to download data from NBA.com and write it to
     local Postgres DB
 License: GPL-2
 LazyData: TRUE
-RoxygenNote: 5.0.1
-Imports:
-    RPostgreSQL (>= 0.4.0),
-    XML  (>= 3.98.0)
+RoxygenNote: 6.0.1
+Depends:
+    RPostgreSQL (>= 0.4.1),
+    jsonlite (>= 1.3),
+    lubridate (>= 1.6),
+    stringr (>= 1.2),
+    zoo (>= 1.7-14),
+    XML (>= 3.98-1.7)
+
+
