added roster news, weekly news, transactions, injuries

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,15 @@ export(get_general)
 export(get_hustle)
 export(get_lineups)
 export(get_matchups)
+export(get_news)
 export(get_on_off)
 export(get_playbyplay)
 export(get_playbyplay2)
+export(get_player_movement)
 export(get_playerbio)
 export(get_players)
 export(get_playtype)
+export(get_rotowire_status)
 export(get_schedule)
 export(get_shooting)
 export(get_shooting_dashboard)
