--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(get_player_movement)
 export(get_playerbio)
 export(get_players)
 export(get_playtype)
+export(get_pro_transactions)
 export(get_rotowire_status)
 export(get_schedule)
 export(get_shooting)
@@ -42,3 +43,8 @@ importFrom(magrittr,"%>%")
 importFrom(purrr,is_character)
 importFrom(purrr,map_df)
 importFrom(purrr,set_names)
+importFrom(rvest,html_attr)
+importFrom(rvest,html_nodes)
+importFrom(rvest,html_table)
+importFrom(stringr,str_detect)
+importFrom(xml2,read_html)
