--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,4 +47,5 @@ importFrom(rvest,html_attr)
 importFrom(rvest,html_nodes)
 importFrom(rvest,html_table)
 importFrom(stringr,str_detect)
+importFrom(stringr,str_replace_all)
 importFrom(xml2,read_html)
